// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={350}
      createdAt={-345600000}
      description="Gumming"
      id="1"
      key="1"
      note="Shiz just keeps on..."
    />
    <ExpenseListItem
      amount={1790}
      createdAt={345600000}
      description="Yummy"
      id="2"
      key="2"
      note="Deluxe package espana"
    />
    <ExpenseListItem
      amount={6000}
      createdAt={10000}
      description="So weak"
      id="3"
      key="3"
      note="meh"
    />
  </div>
</div>
`;
